<resources>
    <string name="app_name">grupo03Kotlin</string>
    <string name="btn01">Ejercicio 01</string>
    <string name="btn02">Ejercicio 02</string>
    <string name="btn03">Ejercicio 03</string>
    <string name="btn04">Ejercicio 04</string>
    <string name="txtTitulo">Consulta de Año Bisiesto</string>
    <string name="txtAnio">"Ingrese un  Año "</string>
    <string name="btnConsultar">Consultar Año Bisiesto</string>
    <!--Controlador para el ejercicio04-->
    <string name="txtTitulo04">Numero Perfecto</string>
    <string name="txtNumeroPerfecto04">Ingrese Un Numero</string>
    <string name="btnNumeroPerfecto">Consultar Numero Perfecto</string>
    <string name="valtxtarticulos">Ingrese el total de los articulos</string>
    <string name="valtxtarticulo">Ingrese  total de articulos</string>
    <string name="valtxtmontototal">Ingrese el monto total de compras</string>
    <string name="btncalcular">Calcular Descuento</string>


</resources>